# Rendering_Engine

./: .gitignore  CMakeLists.txt  GUI.h  Main.cpp  README.md  camera.cpp  camera.h  light_source.h  material.h  mesh.h  model.h  renderer.h  resource_manager.cpp  resource_manager.h  settings.h  shader.h  texture.h
lib/: glad.c
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/imgui/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
resources/shaders/: default_shader.fs  lightsource_shader.fs  phong_shader.fs  vertex_shader.vs
shaders/: colour_shader.fs  default_shader.fs  lightsource_shader.fs  phong_shader.fs  texture_shader.fs  vertex_shader.vs
src/: GUI.h  IO.h  light_source.h  main.cpp  mesh.h  model.h  resource_manager.h  shader.h  texture.h
